# SSA

./: README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml
doc/example/: Untitled.ipynb  dimerization_kinetics.py  ex0.py  ex1.py  ex2.py  ex3.py  ex4.py  michaelis_menten.py  mono_molecular_chain.py  mrna_transcription.py  one_state_gene_expression.py  predator_prey.py  restats  sir.py  transcription.py  two_state_gene_expression.py
ssa/: __init__.py  direct.py  engine.py  model.py  output.py  plot.py  result.py  util.py
ssa/engine/: __init__.py  base.py  multi_process.py  task.py
