#################
# Package setup #
#################

[metadata]
name = ssa
version = attr: ssa.version.__version__
description = Stochastic Simulation Algorithms
long_description = file: README.rst
long_description_content_type = text/x-rst

# URLs
url = https://github.com/yannikschaelte/ssa
download_url = https://github.com/yannikschaelte/ssa/releases
project_urls =
  Bug Tracker = https://github.com/yannikschaelte/ssa/issues

# Author information
author = The SSA developers
author_email = yannik.schaelte@gmail.com
maintainer = The SSA developers
maintainer_email = yannik.schaelte@gmail.com

# License information
license = BSD-3-Clause
license_file = LICENSE

[options]
install_requires =
  numpy >= 1.19.1
  scipy >= 1.5.2
  pandas >= 1.2.0

python_requires= >=3.6

# Where is the code
packages = find:
